# ICRA2015-experiments

./: CMakeLists.txt  README  README.md  ball_on_hill.xml  output.cpp  sliding.cpp  spinning-box.xml
ball/: CMakeLists.txt  ball.world  plot_data.m  plugin.cpp  setup.sh  sphere-impulse.xml  sphere-plugin.cpp  sphere.sdf  sphere.xml
ball/bowling_ball/: model.config  model.sdf
ball/ground_plane_low-mu/: model.config  model.sdf
ball/listener/: CMakeLists.txt
office/: CMakeLists.txt  office-impulse.xml  office-init.cpp  office.world  office.xml
office/book/: model.config  model.sdf
office/desk/: model.sdf
